Pascal/test/cohadar/pascal/errors/bad_operands_arithmetic.pas
program test;
var a: boolean;
	b: integer;
	
begin
	b := 2 + a;
end.